--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,14 @@
-@use "abstracts/mixins";
+
+@use 'layout/header';
+@use 'layout/footer';
+@use 'layout/navigation';
+
+@use 'components/button';
+
+@use 'pages/index';
+
+@use 'base/base';
+@use 'base/typography';
+
+
+
