--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -1,18 +1,11 @@
 <header class="header">
 
-    <div class="header-aligner">
+    <div class="header-wrapper">
 
-        <p class="header__description">Frontend Web Developer &amp; QA Tester</p>
-    
-        <h1 class="header__title">Iveta Círová</h1>
+        {% include 'partials/navigation.njk' %}
 
-        
-        <a href="#" a class="btn">O mně</a>
-        <a href="#" a class="btn">Projekty</a>
-    
-        
-        <img src="/images/profil-foto2.png" alt="profilové foto" class="header__image" width="300px">
-
+        <div class="badge badge--header">Frontend &amp; QA</div>
+      
     </div>
         
 </header>
