--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 $color-primary: #0e22a5;
 $color-secondary: #a112ac;
-$color-supplementary: #21D4FD;
+$color-supplementary:rgb(235, 244, 243);
 
 $default-font: 'Open Sans', sans-serif;
 $title-font: 'Montserrat', sans-serif;
