--- a/_includes/partials/navigation.njk
+++ b/_includes/partials/navigation.njk
@@ -2,7 +2,7 @@
 
     <ul class="menu">
         <li class="menu__item"><a href="/" class="menu__link">Home</a></li>
-        <li class="menu__item"><a href="" class="menu__link">O mně</a></li>
+        <li class="menu__item"><a href="" class="menu__link">CV</a></li>
         <li class="menu__item"><a href="" class="menu__link">Projekty</a></li>
         <li class="menu__item"><a href="" class="menu__link">Kontakt</a></li>
     </ul>
