--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,8 +5,10 @@
 
 @use 'components/button';
 @use 'components/badges';
+@use 'components/cards';
 
 @use 'pages/index';
+@use 'pages/cv';
 
 @use 'base/base';
 @use 'base/typography';
