--- a/_includes/partials/navigation.njk
+++ b/_includes/partials/navigation.njk
@@ -2,8 +2,8 @@
 
     <ul class="menu">
         <li class="menu__item"><a href="/" class="menu__link">Home</a></li>
-        <li class="menu__item"><a href="" class="menu__link">CV</a></li>
-        <li class="menu__item"><a href="" class="menu__link">Projekty</a></li>
-        <li class="menu__item"><a href="" class="menu__link">Kontakt</a></li>
+        <li class="menu__item"><a href="/cv/" class="menu__link">CV</a></li>
+        <li class="menu__item"><a href="/projekty/" class="menu__link">Projekty</a></li>
+        <li class="menu__item"><a href="/kontakt/" class="menu__link">Kontakt</a></li>
     </ul>
 </nav>
