--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-.header {
-  margin-bottom: 1em;
-}
 @media screen and (min-width: 680px) {
   .header {
     margin: 1em 0;
@@ -16,11 +13,20 @@
   }
 }
 
+.footer {
+  background-color: rgb(235, 244, 243);
+  padding: 1em;
+}
+.footer__description {
+  text-align: center;
+  margin: 1em;
+}
+
 .menu {
   display: flex;
   gap: 1em;
   justify-content: center;
-  margin-bottom: 1em;
+  margin: 1em auto;
 }
 @media screen and (min-width: 680px) {
   .menu {
@@ -53,7 +59,7 @@
 
 .btn {
   font-weight: 700;
-  background-color: #0e22a5;
+  background-color: #1a34b8;
   color: white;
   padding: 1em 2em;
   border-radius: 0.5em;
@@ -64,7 +70,7 @@
 .btn:hover, .btn:active {
   transform: scale(1.1);
   transition: all 0.3s ease-in-out;
-  background-color: #122cd4;
+  background-color: #2544e0;
 }
 
 .buttons {
@@ -75,13 +81,13 @@
 @media screen and (min-width: 680px) {
   .buttons {
     grid-column: 1/2;
-    grid-row: 3/4;
+    grid-row: 4/5;
   }
 }
 
 .badge {
-  background-color: #0e22a5;
-  background-image: linear-gradient(360deg, #0e22a5 30%, #a112ac 100%);
+  background-color: #1a34b8;
+  background-image: linear-gradient(360deg, #1a34b8 30%, #a112ac 100%);
   text-align: center;
   border-radius: 0.5em;
   padding: 0.25em;
@@ -90,17 +96,59 @@
   font-size: 0.8em;
   font-weight: 700;
   width: 140px;
-  margin: auto;
+  margin: 1em auto;
 }
 
 @media screen and (min-width: 680px) {
   .badge--header {
     margin: 0;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    justify-self: start;
   }
 }
 
-.badge--about {
+.badge--card {
+  width: 200px;
+}
+.resume {
+  padding: 1em;
+}
+@media screen and (min-width: 680px) {
+  .resume {
+    padding: 0;
+  }
+}
+
+.card {
+  border-radius: 0.5em;
+  padding: 1em;
+  width: 100%;
   margin: 1em auto;
+  background-color: rgb(235, 244, 243);
+  min-height: 200px;
+}
+@media screen and (min-width: 680px) {
+  .card {
+    display: flex;
+    gap: 2em;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.card__header {
+  margin-bottom: 1em;
+  text-align: center;
+}
+@media screen and (min-width: 680px) {
+  .card__header {
+    flex: 0 0 30%;
+  }
+}
+.card__date {
+  color: #1a34b8;
+  font-weight: 700;
+  margin-bottom: 1em;
 }
 
 .hero {
@@ -112,7 +160,7 @@
   .hero {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, auto);
+    grid-template-rows: repeat(4, auto);
     justify-items: start;
     align-items: center;
     border-radius: 0.5em;
@@ -130,13 +178,13 @@
 @media screen and (min-width: 680px) {
   .hero__description {
     grid-column: 1/2;
-    grid-row: 2/3;
+    grid-row: 3/4;
     text-align: start;
   }
 }
 .hero__image {
-  background-color: #0e22a5;
-  background-image: linear-gradient(360deg, #0e22a5 30%, #a112ac 100%);
+  background-color: #1a34b8;
+  background-image: linear-gradient(360deg, #1a34b8 30%, #a112ac 100%);
   display: block;
   margin: 3em auto;
   border-radius: 0.5em;
@@ -146,17 +194,17 @@
   .hero__image {
     margin: 0;
     grid-column: 2/-1;
-    grid-row: 1/4;
+    grid-row: 1/5;
     justify-self: end;
   }
 }
 
 .about {
   padding: 1em;
+  margin: 3em;
 }
 
 .icons {
-  margin: 1em;
   text-align: center;
 }
 
@@ -169,6 +217,23 @@
   transform: scale(1.1);
   transition: all 0.3s ease-in-out;
   filter: invert(50%);
+}
+
+.resume__subtitle {
+  color: #1a34b8;
+  margin: 1em 0;
+}
+@media screen and (min-width: 680px) {
+  .resume__subtitle {
+    font-size: 2em;
+  }
+}
+
+@media screen and (min-width: 680px) {
+  .skills {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 html {
@@ -191,12 +256,12 @@ html {
 .title {
   color: #a112ac;
   text-align: center;
-  margin: 1em;
   font-size: 2.5em;
 }
 
 .title--hero {
   text-transform: uppercase;
+  margin-top: 1em;
 }
 @media screen and (min-width: 680px) {
   .title--hero {
@@ -214,6 +279,17 @@ html {
 
 .description {
   font-size: 1.2em;
+}
+
+.weight {
+  font-weight: 600;
+}
+
+.link {
+  color: #1a34b8;
+}
+.link:hover, .link:focus {
+  color: #a112ac;
 }
 
 html {
