--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,7 +18,6 @@ html { box-sizing: border-box; }
 .title {
     color:variables.$color-secondary;
     text-align: center;
-    margin: variables.$spacer;
     font-size: 2.5em;
 
 }
@@ -26,6 +25,7 @@ html { box-sizing: border-box; }
 .title--hero {
 
     text-transform: uppercase;
+    margin-top: variables.$spacer;
 
     @media screen and (min-width: 680px) {
         grid-column: 1 / 2;
@@ -43,5 +43,20 @@ html { box-sizing: border-box; }
 
 .description {
     font-size: 1.2em;
+}
+
+.weight {
+    font-weight: 600;
+}
+
+.link {
+
+    // text-decoration: none;
+    color: variables.$color-primary;
+
+    &:hover,
+    &:focus {
+        color: variables.$color-secondary;
+    }
 }
 
