--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,11 @@
   background-color: rgb(235, 244, 243);
   padding: 1em;
 }
+@media screen and (min-width: 680px) {
+  .footer {
+    border-radius: 0.5em;
+  }
+}
 .footer__description {
   text-align: center;
   margin: 1em;
@@ -229,6 +234,9 @@
   }
 }
 
+.skills {
+  margin-bottom: 2em;
+}
 @media screen and (min-width: 680px) {
   .skills {
     display: grid;
