--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,10 +4,18 @@
 .footer {
     background-color: variables.$color-supplementary;
     padding: variables.$spacer;
+    
+    @media screen and (min-width: 680px) {
+        border-radius: variables.$half-spacer;
+    }
 
     &__description {
         text-align: center;
         margin: variables.$spacer;
     }
+
+
 }
+
+
 
