--- a/sass/pages/_cv.scss
+++ b/sass/pages/_cv.scss
@@ -14,6 +14,8 @@
 }
 
 .skills {
+
+    margin-bottom: variables.$double-spacer;
     @media screen and (min-width: 680px) {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
