--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @use 'components/button';
 @use 'components/badges';
 @use 'components/cards';
+@use 'components/icons';
 
 @use 'pages/index';
 @use 'pages/cv';
