--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,3 +11,8 @@ $triple-spacer: $spacer * 3;
 $half-spacer: $spacer / 2;
 $mini-spacer: $half-spacer / 2;
 
+//breakpointy pro Media Queries
+
+$screen-sm: 680px;
+
+
