--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -32,4 +32,8 @@
     transition: all 0.3s ease-in-out;
 }
 
+// @mixin mq-small {
+//     @media screen and (min-width: variables.$screen-sm)
+// }
+
 
