--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,7 +12,6 @@ $half-spacer: $spacer / 2;
 $mini-spacer: $half-spacer / 2;
 
 //breakpointy pro Media Queries
-
-$screen-sm: 680px;
+$screen-lg: 680px;
 
 
