--- a/_includes/partials/navigation.njk
+++ b/_includes/partials/navigation.njk
@@ -1,9 +1,9 @@
 <nav class="navigation">
 
     <ul class="menu">
-        <li class="menu__item"><a href="/" class="menu__link">Home</a></li>
-        <li class="menu__item"><a href="/cv/" class="menu__link">CV</a></li>
-        <li class="menu__item"><a href="/projekty/" class="menu__link">Projekty</a></li>
-        <li class="menu__item"><a href="/kontakt/" class="menu__link">Kontakt</a></li>
+        <li class="menu__item"><a href="/" class="menu__link {{ 'menu__link--active' if page.fileSlug === '' }}">Home</a></li>
+        <li class="menu__item"><a href="/cv/" class="menu__link {{ 'menu__link--active' if page.fileSlug === 'cv' }}">CV</a></li>
+        <li class="menu__item"><a href="/projekty/" class="menu__link {{ 'menu__link--active' if page.fileSlug === 'projekty' }}">Projekty</a></li>
+        <li class="menu__item"><a href="/kontakt/" class="menu__link {{ 'menu__link--active' if page.fileSlug === 'kontakt' }}">Kontakt</a></li>
     </ul>
 </nav>
