--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,6 +6,7 @@
     display: block;
     color: white
 }
+
 .btn {
 
     @include mixins.button;
@@ -13,25 +14,21 @@
 
     &:hover, 
     &:active {
+        background-color: lighten(variables.$color-primary, 10%);
+
         @include mixins.transform;
         @include mixins.transition;
-    
-        background-color: lighten(variables.$color-primary, 10%);
     }
- 
 }
 
     
 .buttons {
-
     display: flex;
     gap: variables.$spacer;
     justify-content: center;
 
-    @media screen and (min-width: 680px) {
+    @include mixins.display-lg {
         grid-column: 1 / 2;
-        grid-row: 4 / 5;
-        
-        
+        grid-row: 4 / 5; 
     }
 }
