--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,30 +1,27 @@
 @use '../abstracts/variables';
 @use '../abstracts/mixins';
 
-
 .menu {
     display: flex;
     gap: variables.$spacer;
     justify-content: center;
     margin: variables.$spacer auto;
    
-
-    @media screen and (min-width: 680px) {
+    @include mixins.display-lg {
         justify-content: end;
         margin: 0;
     }
 
-    
-
     &__item {
         list-style: none;
+        
         &:hover,
         &:active {
         
             @include mixins.transform;
             @include mixins.transition;
-    
         }
+
     }
 
     &__link {
@@ -34,11 +31,13 @@
 
         &:hover,
         &:active {
-        
-           
-            @include mixins.transition;
-    
             color: lighten(black, 50%);
+        
+            @include mixins.transition;
         }
     }
+}
+
+.menu__link--active {
+        color: lighten(black, 50%); 
 }
