--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@
   list-style: none;
 }
 .menu__item:hover, .menu__item:active {
-  transform: scale(1.1);
+  transform: scale(1.07);
   transition: all 0.3s ease-in-out;
 }
 .menu__link {
@@ -56,7 +56,6 @@
   color: gray;
   transition: all 0.3s ease-in-out;
 }
-
 .menu__link--active {
   color: gray;
 }
@@ -79,7 +78,7 @@
 }
 .btn:hover, .btn:active {
   background-color: #2544e0;
-  transform: scale(1.1);
+  transform: scale(1.07);
   transition: all 0.3s ease-in-out;
 }
 
@@ -108,7 +107,6 @@
   background-color: #1a34b8;
   background-image: linear-gradient(360deg, #1a34b8 30%, #a112ac 100%);
 }
-
 @media screen and (min-width: 680px) {
   .badge--hero {
     margin: 0;
@@ -117,11 +115,9 @@
     justify-self: start;
   }
 }
-
 .badge--about {
   margin-bottom: 3em;
 }
-
 .badge--card {
   width: 200px;
 }
@@ -165,13 +161,11 @@
   font-weight: 700;
   margin-bottom: 1em;
 }
-
 .card--project {
   margin: 2em 0;
 }
-
 .card--inactive {
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .icons {
@@ -185,7 +179,7 @@
 .icon-image:hover,
 .icon-image:focus {
   filter: invert(50%);
-  transform: scale(1.1);
+  transform: scale(1.07);
   transition: all 0.3s ease-in-out;
 }
 
@@ -274,7 +268,6 @@ html {
   text-align: center;
   font-size: 2.5em;
 }
-
 .title--hero {
   text-transform: uppercase;
   margin-top: 1em;
@@ -291,16 +284,13 @@ html {
   color: #1a34b8;
   font-size: 2em;
 }
-
-.subtitle--header {
+.subtitle--about {
   text-align: center;
   color: #a112ac;
 }
-
 .subtitle--projects {
-  font-size: 1.2;
+  font-size: 1.8em;
 }
-
 .subtitle--resume {
   color: #1a34b8;
   margin: 1em 0;
