--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -3,7 +3,7 @@
     <div class="icons">
         <a href="https://www.linkedin.com/in/iveta-c%C3%ADrov%C3%A1-b8638424a/" class="icon-link"><img src="/icons/linkedin_social_icon.svg" alt="ikona linkedin" class="icon-image" width="40px"/></a>
         <a href="https://github.com/icirova?tab=repositories" class="icon-link"><img src="/icons/github_icon.svg" alt="ikona gitHub" class="icon-image" width="40px" /></a>
-        <a href="https://twitter.com/IvetaCirova" class="icon-link"><img src="/icons/twitter_social_icon.svg" alt="ikona twitter" class="icon-image" width="40px" /></a>
+        <!-- <a href="https://twitter.com/IvetaCirova" class="icon-link"><img src="/icons/twitter_social_icon.svg" alt="ikona twitter" class="icon-image" width="40px" /></a> -->
     </div>
 
     
