--- a/css/main.css
+++ b/css/main.css
@@ -67,13 +67,16 @@
 }
 
 .btn {
+  overflow: hidden;
+  position: relative;
   font-weight: 700;
   background-color: #1a34b8;
   color: white;
   padding: 1em 2em;
   border-radius: 0.5em;
   text-align: center;
-  width: 150px;
+  width: 120px;
+  letter-spacing: 1px;
   margin-bottom: 1em;
 }
 .btn:hover, .btn:active {
@@ -94,6 +97,22 @@
   }
 }
 
+button .circle {
+  position: absolute;
+  background-color: #7e90ed;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  animation: scale 0.5s ease-out;
+}
+
+@keyframes scale {
+  to {
+    transform: translate(-50%, -50%) scale(3);
+    opacity: 0;
+  }
+}
 .badge {
   text-align: center;
   border-radius: 0.5em;
