--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -9,6 +9,14 @@
 
 .btn {
 
+    //pro efekt na tlačítkách
+    overflow: hidden;
+    position: relative;
+  
+
+    
+    
+
     @include mixins.button;
     @include mixins.m-bottom;
 
@@ -30,5 +38,22 @@
     @include mixins.display-lg {
         grid-column: 1 / 2;
         grid-row: 4 / 5; 
+    }
+}
+
+button .circle {
+    position: absolute;
+    background-color: lighten(variables.$color-primary, 30%);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    animation: scale 0.5s ease-out;
+}
+
+@keyframes scale {
+    to {
+        transform: translate(-50%, -50%) scale(3);
+        opacity: 0;
     }
 }
