--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@
   padding: 1em 2em;
   border-radius: 0.5em;
   text-align: center;
-  width: 120px;
+  width: 150px;
   letter-spacing: 1px;
   margin-bottom: 1em;
 }
@@ -83,6 +83,11 @@
   background-color: #2544e0;
   transform: scale(1.07);
   transition: all 0.3s ease-in-out;
+}
+@media screen and (min-width: 680px) {
+  .btn {
+    width: 120px;
+  }
 }
 
 .buttons {
