--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -17,6 +17,7 @@
     border-radius: variables.$half-spacer;
     text-align: center;
     width: 150px;
+    height: 55px;
     letter-spacing: 1px;
 }
 
