--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,7 @@
   border-radius: 0.5em;
   text-align: center;
   width: 150px;
+  height: 55px;
   letter-spacing: 1px;
   margin-bottom: 1em;
 }
@@ -87,6 +88,7 @@
 @media screen and (min-width: 680px) {
   .btn {
     width: 120px;
+    height: 45px;
   }
 }
 
