--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -49,7 +49,8 @@
 
 button .circle {
     position: absolute;
-    background-color: lighten(variables.$color-primary, 30%);
+    background-color: (variables.$color-secondary);
+    z-index: -1;
     width: 100px;
     height: 100px;
     border-radius: 50%;
