--- a/sass/main.css
+++ b/sass/main.css
@@ -53,11 +53,11 @@
   color: black;
 }
 .menu__link:hover, .menu__link:active {
-  color: gray;
+  color: rgb(127.5, 127.5, 127.5);
   transition: all 0.3s ease-in-out;
 }
 .menu__link--active {
-  color: gray;
+  color: rgb(127.5, 127.5, 127.5);
 }
 
 .btn-link {
@@ -81,7 +81,7 @@
   margin-bottom: 1em;
 }
 .btn:hover, .btn:active {
-  background-color: #2544e0;
+  background-color: rgb(36.8285714286, 67.6571428571, 224.1714285714);
   transform: scale(1.07);
   transition: all 0.3s ease-in-out;
 }
@@ -131,8 +131,8 @@ button .circle {
   font-weight: 700;
   width: 140px;
   margin: 1em auto;
-  background-color: #1a34b8;
-  background-image: linear-gradient(360deg, #1a34b8 30%, #a112ac 100%);
+  background-color: rgb(215.5714285714, 221.1428571429, 249.4285714286);
+  background-image: linear-gradient(360deg, rgb(215.5714285714, 221.1428571429, 249.4285714286) 30%, rgb(245.0789473684, 196.1578947368, 248.8421052632) 100%);
 }
 @media screen and (min-width: 680px) {
   .badge--hero {
@@ -211,6 +211,10 @@ button .circle {
 .hero {
   padding: 1em;
   background-color: rgb(235, 244, 243);
+  min-height: 320px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin-bottom: 1em;
 }
 @media screen and (min-width: 680px) {
@@ -244,12 +248,11 @@ button .circle {
   margin: 3em auto;
   border-radius: 0.5em;
   max-width: 100%;
-  background-color: #1a34b8;
-  background-image: linear-gradient(360deg, #1a34b8 30%, #a112ac 100%);
+  background-color: rgb(215.5714285714, 221.1428571429, 249.4285714286);
+  background-image: linear-gradient(360deg, rgb(215.5714285714, 221.1428571429, 249.4285714286) 30%, rgb(245.0789473684, 196.1578947368, 248.8421052632) 100%);
 }
 @media screen and (min-width: 680px) {
   .hero__image {
-    margin: 0;
     grid-column: 2/-1;
     grid-row: 1/5;
     justify-self: end;
